[project]
name = "yt-interfacer"
version = "0.1.0"
description = "YouTube API — transcripts + MP3 archival"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "yt-dlp>=2025.1",
    "youtube-transcript-api>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
